--- a/playground/package.json
+++ b/playground/package.json
@@ -14,6 +14,7 @@
     "@winner-fed/winjs": "*"
   },
   "devDependencies": {
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "@winner-fed/preset-vue": "*"
   }
 }
